[tool.poetry]
name = "isn-tractor"
version = "0.3.3"
description = "Interactome based Individual Specific Networks"
authors = ["Giada Lalli <giada.lalli@kuleuven.be>",
           "Zuqi Li <zuqi.li@kuleuven.be>",
           "Federico Melograna <federico.melograna@kuleuven.be>",
           "James Collier <james.collier@vib.be>"]
readme = "README.md"
license = "MIT"
packages = [{include = "isn_tractor"}]
repository = "https://github.com/GiadaLalli/ISN-tractor"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.2"
numpy = "^2.0.0"
torch = "^2.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"
pytest = "^8.2.2"
mypy = "^1.10.1"
pytest-cov = "^5.0.0"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"


[tool.poetry.group.benchmark.dependencies]
pytest-benchmark = "^4.0.0"
pyperf = "^2.7.0"


[tool.poetry.group.visualization.dependencies]
networkx = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true


[tool.pylint]
generated-members = "t.tensor,t.matmul,t.arange,t.corrcoef,t.cat,t.argsort,t.zeros,t.device,t.square,t.from_numpy,t.mean,t.stack,t.max,t.sum,t.pow,t.sqrt,t.outer,t.flatten,t.float32,t.transpose,t.reshape,t.median,t.abs,t.mul,t.lt,t.sub,t.neg"


[tool.pytest.ini_options]
addopts = "-m 'not benchmark_cpu_dense and not benchmark_cpu_sparse and not benchmark_cuda and not performance_regression_test'"
markers = [
    "benchmark_cpu_dense: marks tests as CPU benchmarks for dense ISNs (select with '-m benchmark_cpu_dense')",
    "benchmark_cpu_sparse: marks tests as CPU benchmarks for sparse ISNs (select with '-m benchmark_cpu_sparse')",
    "benchmark_cuda: marks tests as GPU benchmarks (select with '-m benchmark_cuda')",
    "performance_regression_test: CI test for performance regressions"
]
